--- a/DXInit.vcxproj
+++ b/DXInit.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="CCollision.cpp" />
     <ClCompile Include="CCursor.cpp" />
     <ClCompile Include="CDrawString.cpp" />
+    <ClCompile Include="CEase.cpp" />
     <ClCompile Include="CGameObject.cpp" />
     <ClCompile Include="CGame.cpp" />
     <ClCompile Include="CInput.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="CCollision.h" />
     <ClInclude Include="CCursor.h" />
     <ClInclude Include="CDrawString.h" />
+    <ClInclude Include="CEase.h" />
     <ClInclude Include="CGameObject.h" />
     <ClInclude Include="CGame.h" />
     <ClInclude Include="CInput.h" />
