--- a/DXInit.vcxproj
+++ b/DXInit.vcxproj
@@ -149,8 +149,9 @@
     <ClCompile Include="Cdamagetile.cpp" />
     <ClCompile Include="CDrawString.cpp" />
     <ClCompile Include="CEase.cpp" />
-    <ClCompile Include="CGameObject.cpp" />
     <ClCompile Include="CGame.cpp" />
+    <ClCompile Include="CGameObject.cpp" />
+    <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="CInput.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CScene.cpp" />
@@ -164,7 +165,7 @@
     <ClCompile Include="direct3d.cpp" />
     <ClCompile Include="DirectWrite.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="ResultScene.cpp" />
+    <ClCompile Include="StageScene2.cpp" />
     <ClCompile Include="SelectScene.cpp" />
     <ClCompile Include="StageScene.cpp" />
     <ClCompile Include="TitleScene.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="CEase.h" />
     <ClInclude Include="CGameObject.h" />
     <ClInclude Include="CGame.h" />
+    <ClInclude Include="ResultScene.h" />
     <ClInclude Include="CInput.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CScene.h" />
@@ -193,7 +195,7 @@
     <ClInclude Include="direct3d.h" />
     <ClInclude Include="DirectWrite.h" />
     <ClInclude Include="PixelShader.h" />
-    <ClInclude Include="ResultScene.h" />
+    <ClInclude Include="StageScene2.h" />
     <ClInclude Include="SelectScene.h" />
     <ClInclude Include="StageScene.h" />
     <ClInclude Include="TitleScene.h" />
