--- a/DXInit.vcxproj.filters
+++ b/DXInit.vcxproj.filters
@@ -99,7 +99,7 @@
     <ClCompile Include="CGameObject.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="CEventManager.cpp">
+    <ClCompile Include="CGameManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="xa2.cpp">
@@ -194,7 +194,7 @@
     <ClInclude Include="ResultScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="CEventManager.h">
+    <ClInclude Include="CGameManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="xa2.h">
