--- a/DXInit.vcxproj
+++ b/DXInit.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Cdamagetile.cpp" />
     <ClCompile Include="CDrawString.cpp" />
     <ClCompile Include="CEase.cpp" />
+    <ClCompile Include="CEnemy.cpp" />
     <ClCompile Include="CGameManager.cpp" />
     <ClCompile Include="CGame.cpp" />
     <ClCompile Include="CGameObject.cpp" />
@@ -168,6 +169,7 @@
     <ClCompile Include="direct3d.cpp" />
     <ClCompile Include="DirectWrite.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Stage2Scene.cpp" />
     <ClCompile Include="StageScene2.cpp" />
     <ClCompile Include="SelectScene.cpp" />
     <ClCompile Include="StageScene.cpp" />
@@ -183,6 +185,7 @@
     <ClInclude Include="Cdamagetile.h" />
     <ClInclude Include="CDrawString.h" />
     <ClInclude Include="CEase.h" />
+    <ClInclude Include="CEnemy.h" />
     <ClInclude Include="CGameManager.h" />
     <ClInclude Include="CGameObject.h" />
     <ClInclude Include="CGame.h" />
@@ -200,6 +203,7 @@
     <ClInclude Include="direct3d.h" />
     <ClInclude Include="DirectWrite.h" />
     <ClInclude Include="PixelShader.h" />
+    <ClInclude Include="Stage2Scene.h" />
     <ClInclude Include="StageScene2.h" />
     <ClInclude Include="SelectScene.h" />
     <ClInclude Include="StageScene.h" />
